init empty project

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# eclipce
-.project
-
-# phpstorm
-.idea
-
-# mac sys
+*.iml
+.gradle
+/local.properties
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
 .DS_Store
+/build
+/captures
+.externalNativeBuild
